The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: 
Date: yyyy/mm/dd
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2005/11/16 10:25:00 CST
Tag: blume-22051116-btrace
Description:

Fixed problem with bogus exception message when using back-trace
facility.

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2005/11/15 22:35:00 CST
Tag: blume-22051115-array2copy
Description:

Added simple implementation of Array2.copy.  (Warning: mostly untested.)

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2005/11/15 21:35:00 CST
Tag: blume-22051115-versiontool
Description:

Reversed change to src/system/smlnj/internals/versiontool.cm.  This
file gets loaded as a tool -- by the equivalent of CM.make during the
run of CMB.make.  Thus, CMB's path configuration is meaningless for
it.  Instead, it has the status of "user code", so it should use
$/basis.cm to refer to the Basis library.  (At least that's true for
the purpose of bootstrapping the previous change.  In the future it
might make sense to have versiontool.cm refer to
$smlnj/basis/basis.cm, i.e., the version of the Basis that the
compiler itself uses.)

Also patched src/system/testml to have it activate those extra anchor
bindings in config/extrapathconfig.

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2005/11/15 16:35:00 CST
Tag: blume-22051115-libraries
Description:

This change affects the way the following libraries are tied into
the system:

   $/basis.cm
   $/smlnj-lib.cm
   $/pp-lib.cm
   $/controls-lib.cm
   $/html-lib.cm
   $/ml-yacc-lib.cm