@@ -1,6 +1,12 @@
 BOOT: the location of the latest boot files.
 ----------------------------------------------------------------------
 Name: Matthias Blume
+Date: 2005/11/16 15:00:00 CDT
+Tag: Release_110_57
+Version: 110.57
+Location: http://smlnj.cs.uchicago.edu/dist/working/110.57/
+----------------------------------------------------------------------
+Name: Matthias Blume
 Date: 2005/10/25 16:00:00 CDT
 Tag: Release_110_56
 Version: 110.56
