@@ -16,7 +16,9 @@ Library
 	library ($SMLNJ-LIB/HTML/html-lib.cm)
 is
 	$SMLNJ-LIB/HTML/html-lib.cm
-		(bind:(anchor:basis.cm value:$smlnj/basis)
-		 bind:(anchor:smlnj-lib.cm value:$smlnj/smlnj-lib)
-		 bind:(anchor:html-lib.cm value:$smlnj/smlnj-lib)
-		 bind:(anchor:ml-yacc-lib.cm value:$smlnj/ml-yacc))
+		(bind:(anchor:basis.cm value:$SMLNJ-BASIS)
+		 bind:(anchor:smlnj-lib.cm value:$SMLNJ-LIB/Util)
+		 bind:(anchor:html-lib.cm value:$SMLNJ-LIB/HTML)
+		 bind:(anchor:pp-lib.cm value:$SMLNJ-LIB/PP)
+		 bind:(anchor:controls-lib.cm value:$SMLNJ-LIB/Controls)
+		 bind:(anchor:ml-yacc-lib.cm value:$SMLNJ-ML-YACC-LIB))
