@@ -16,6 +16,10 @@ Library
 	library ($SMLNJ-LIB/PP/pp-lib.cm)
 is
 	$SMLNJ-LIB/PP/pp-lib.cm
-		(bind:(anchor:basis.cm value:$smlnj/basis)
-		 bind:(anchor:smlnj-lib.cm value:$smlnj/smlnj-lib)
-		 bind:(anchor:html-lib.cm value:$smlnj/smlnj-lib))
+		(bind:(anchor:basis.cm value:$SMLNJ-BASIS)
+		 bind:(anchor:smlnj-lib.cm value:$SMLNJ-LIB/Util)
+		 bind:(anchor:html-lib.cm value:$SMLNJ-LIB/HTML)
+		 bind:(anchor:pp-lib.cm value:$SMLNJ-LIB/PP)
+		 bind:(anchor:controls-lib.cm value:$SMLNJ-LIB/Controls)
+		 bind:(anchor:ml-yacc-lib.cm value:$SMLNJ-ML-YACC-LIB))
+
